--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -2,11 +2,9 @@
  * Fonts
 */
 
-@font-face {
-  font-family: 'DINP-R';
-  src: url("../fonts/DINPro-Regular.eot?") format("eot"),
-  url("../fonts/DINPro-Regular.woff") format("woff"),
-  url("../fonts/DINPro-Regular.ttf") format("truetype"),
-  url("../fonts/DINPro-Regular.svg#DINPro-Regular") format("svg");
-  font-style: normal;
-}
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap');
+
+// Font weights
+$weight-300: 300;
+$weight-600: 600;
+$weight-800: 800;
