--- a/src/scss/demo.scss
+++ b/src/scss/demo.scss
@@ -38,10 +38,14 @@ h1 {
 
   &__flags {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
   }
 
+  // on larger devices situate it better
+
   &__flags--child {
+    flex-basis: 350px;
     margin: 50px;
     border: 1px solid black;
   }
