finished filtering by region :fire:

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -29,12 +29,12 @@
       <!-- search by name -->
     </div>
     <select class="main__dropdown">
-      <option>Filter by Region</option>
-      <option onclick="sortByAfrica()">Africa</option>
-      <option>America</option>
-      <option>Asia</option>
-      <option>Europe</option>
-      <option>Oceania</option>
+      <option value="">Filter by Region</option>
+      <option value="africa">Africa</option>
+      <option value="americas">Americas</option>
+      <option value="asia">Asia</option>
+      <option value="europe">Europe</option>
+      <option value="oceania">Oceania</option>
     </select>
     <div class="main__flags">
       <!-- <div class="main__flags--child">
