formatted code + search bar bug :bug:

--- a/src/scss/demo.scss
+++ b/src/scss/demo.scss
@@ -11,7 +11,7 @@ h1 {
 
 .navbar {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
   padding: 20px;
 
