fixed search :bug:

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -34,7 +34,7 @@
           placeholder="Search for a contry..."
         />
       </div>
-      <select class="main__dropdown">
+      <select id="dropdown" class="main__dropdown">
         <option value="">Filter by Region</option>
         <option value="africa">Africa</option>
         <option value="americas">Americas</option>
